fixed margin and spacing

--- a/resources/css/games/game-modes/game-modes.css
+++ b/resources/css/games/game-modes/game-modes.css
@@ -269,7 +269,7 @@
 .details-content {
     flex: 1;
     overflow-y: auto;
-    padding: 40px;
+    padding: 40px 40px 20px 40px;
 }
 
 /* Detail Header */
